# folhaweb_rust

./: .env  Cargo.toml
migrations/: 20250927012246_uf_folha.sql  20250929122206_kanban_tables.sql
src/: error.rs  main.rs  middlewares.rs  repository.rs  state.rs
src/cadastro/: mod.rs  model.rs  repository.rs  router.rs  schema.rs  service.rs  view.rs
src/core/: mod.rs  model.rs  repository.rs  schema.rs  service.rs
src/filters/: array.rs  datetime.rs  mod.rs  number.rs  string.rs
src/folha/: model.rs  repository.rs  router.rs  schema.rs  service.rs  view.rs
src/kanban/: mod.rs  model.rs  repository.rs  router.rs  schema.rs  service.rs  view.rs
src/utils/: mod.rs  serde_utils.rs  validator.rs
static/js/: brasao.js
templates/: 403.html  404.html  500.html  base.html  folha_list.html  index.html  login.html  menu.html  nav_bar.html  principal.html
templates/cadastro/: folha_list.html  uf_form.html  uf_list.html
templates/cadastro/relatorio/: contra_cheque.js  rlt_contato.js
templates/components/: combobox.html  combobox_multi.html  components.txt  endereco_cep.html  icons_svg.html  macros.html  modal.html
templates/kanban/: board_form.html  board_list.html  board_view.html
templates/parts/: flash_message.html  paginacao.html
