[package]
name = "folhaweb_rust"
version = "0.1.0"
edition = "2024"


[dependencies]

# Web framework
axum = { version = "0.8", features = ["multipart"] }

# Session management
tower-sessions = { version = "0.14" }
axum-messages = "0.8.0"

# Async runtime
tokio = { version = "1.47", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid", "derive", "bigdecimal"] }

# Logging and monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tower-http = { version = "0.6", features = ["trace", "metrics", "fs", "cors"] }
prometheus = { version = "0.14" }

# Templating
minijinja = { version = "2.11", features = ["loader"] }

# Environment variables
dotenv = "0.15"

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
time = { version = "0.3", features = ["formatting"] }

# UUID generation
uuid = { version = "1.17", features = ["serde", "v4"] }

# Authentication and security
otpauth = "0.5"
password-hash = "0.5"
argon2 = "0.5"
jsonwebtoken = "9.2"
rand_core = "0.9"
rand = "0.9"

# Utilities
base32 = "0.5"
base64 = "0.22"
validator = { version = "0.20", features = ["derive"] }
regex = "1.10.6"
async-trait = "0.1"
anyhow = "1.0"
percent-encoding = "2.3"
urlencoding = "2.1"

# numeros
bigdecimal = { version = "0.4", features = [ "serde-json" ] }

# QR code and image processing
qrcode = "0.14"
image = "0.25"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Tokio utilities (inclui ReaderStream)
tokio-util = { version = "0.7", features = ["io"] }
tower = "0.5.2"

# Para gerar schemas
#schemars = "0.8"      # gera JSON Schema
#utoipa = "4"          # gera OpenAPI/Swagger

[dev-dependencies]
# Testing dependencies
anyhow = "1.0"
httpc-test = "0.1"
sqlx-cli = {version = "0.8", default-features = false, features = ["rustls", "postgres"] }
rstest = "0.26"
testcontainers = "^0.25"
testcontainers-modules = { version = "0.13", features = ["postgres"] }

